# evm-benchmark

./: .gitignore  Dockerfile  LICENSE  README.md  config-caldera.json  config-hermez.json  config-optimism.json  config-standard.json  config-zksync.json  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
collector/: docker-compose.yml  package.json
collector/provisioning/dashboards/: benchmark.json  dashboard.yml
collector/provisioning/datasources/: automatic.yml
core/: .gitignore  hardhat.config.js  main.ts  package.json  tsconfig.build.json  tsconfig.json
core/src/generator/: app.controller.ts  app.module.ts  app.service.ts  index.ts
core/src/generator/config/: config.service.ts
core/src/generator/module/: deposit.ts  erc20Transfer.ts  mint.ts  normalTransfer.ts  swap.ts
core/src/generator/utils/: account.ts  deployContracts.ts  fundERC20Tokens.ts  fundNativeTokens.ts  network.ts  types.ts  utils.ts
core/src/lib/: index.ts
core/src/lib/config/: index.ts
core/src/monitor/: index.ts
generator/: package-lock.json
rs-addon/: Cargo.toml  README.md  index.d.ts  index.js  package.json
rs-addon/__test__/: index.spec.mjs
rs-addon/npm/darwin-x64/: README.md  package.json
rs-addon/npm/linux-x64-gnu/: README.md  package.json
rs-addon/npm/win32-x64-msvc/: README.md  package.json
rs-addon/src/: lib.rs  logger.rs  transaction.rs
rs-addon/src/fund/: batch_transfer_contract.rs  erc20.rs  mod.rs  native.rs
rs-addon/src/sign/: mod.rs  signature.rs  signer.rs
scripts/: config-schema.json  run-dev.sh  run-hardhat.sh
(+7 files in other folders)
