[package]
edition = "2021"
name = "rs-addon"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.0", default-features = false, features = ["napi4", "async", "tokio_rt"] }
napi-derive = "2.12.2"
ethers = "2.0.14"
tokio = { version = "1.28.0", features = ["full"] }
hex = "0.4.3"
coins-bip32 = "0.8.7"
zksync-web3-rs = "0.1.1"
log = "0.4.21"
simple_logger = "5.0.0"
anyhow = "1.0.86"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
